<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bg_img"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:adjustViewBounds="false"
        android:background="@drawable/xyz"
        android:contentDescription="@string/todo"
        android:cropToPadding="true"
        android:padding="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/txtscroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg_img">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/enrollment_no"
                style="@style/text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/_19soece13019"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/fn"
                style="@style/text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firstname" />

            <TextView
                android:id="@+id/mn"
                style="@style/text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medalname" />

            <TextView
                android:id="@+id/ln"
                style="@style/text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lastname" />

            <TextView
                android:id="@+id/email"
                style="@style/text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <TextView
                android:id="@+id/mno"
                style="@style/text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mno" />

            <TextView
                android:id="@+id/gender"
                style="@style/text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender" />

            <TextView
                android:id="@+id/city"
                style="@style/text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>